Fix media queries
adjust the scale of the resume image
and make sure the view my resume button is working
fix the screen shots of projects so they arent stretched

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ h4 {
   color: #07043f;
   letter-spacing: .25px;
   font-weight: 200;
-  font-size: 15px !important;
+  /*font-size: 15px !important;*/
 }
 
 .project-title {
@@ -1514,48 +1514,6 @@ ul.styled-list.list-star li:before {
   margin-left: 20px;
 }
 
-
-/*.grid figure {
-  position: relative;
-  float: left;
-  overflow: hidden;
-  background: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 33.33333333%;
-  box-sizing: border-box;
-}*/
-
-/*.grid figure img {
-  position: relative;
-  display: block;
-  min-height: 100%;
-  max-width: 100%;
-  opacity: 1;
-  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: opacity 0.3s, transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-}*/
-
-/*.grid figure figcaption {
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.25em;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}*/
-
-/*.grid figure figcaption>a {
-  z-index: 1000;
-  position: absolute;
-  right: 50%;
-  bottom: 50px;
-  margin-right: -105px;
-  opacity: 0;
-  -webkit-transform: translate3d(0, 60px, 0);
-  transform: translate3d(0, 60px, 0);
-  -webkit-transition: -webkit-transform 0.35s, opacity 0.35s;
-  transition: transform 0.35s, opacity 0.35s;
-}*/
 .btn.btn-main.git {
   z-index: 1000;
   position: absolute;
@@ -1607,6 +1565,11 @@ ul.styled-list.list-star li:before {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
+}
+
+.project-blurb {
+  width: 100%;
+  font-size: 10px !important;
 }
 
 .clients {
@@ -1880,19 +1843,50 @@ footer.site-footer a:hover {
      align-items: center;
    }
    .resume-img{
-   height: 300px;
-   width: 300px;
-   float: right;
-  *zoom: 4;
-   position: relative;
- }
-
-
-
+     width: 100%;
+     height: 100%;
+     margin: 10%;
+     padding: 10%;
+     left: 10%;
+     right: 10%;
+     transform: scale(1.65);
+   }
   .about-natalia {
     font-size: 15px;
     text-align: center;
   }
+  .portfolio-item{
+  width: 90%;
+  margin: 10%;
+  padding: 10%;
+  transform: scale(2);
+  }
+  .poly-img{
+    transform: scale(2);
+  }
+  .bubble-img {
+    transform: scale(2);
+  }
+}
+
+@media only screen and (min-width: 767x) and (max-width: 990px) {
+  .portfolio-item{
+  width: 30%;
+  margin: 50%;
+  padding: 50%;
+  left: 50%;
+  right: 50%;
+  }
+}
+.poly-img{
+  width: 75%;
+}
+.bubble-img {
+  width: 75%;
+}
+.portfolio-item {
+  background-position: 50% 50%;
+  background-size: contain;
 }
 
 @media (min-width: 768px) {
@@ -1904,9 +1898,25 @@ footer.site-footer a:hover {
     padding-top: 20px;
     padding-bottom: 20px;
   }
-}
+  .about-header{
+  text-align: center;
+  left: 10%;
+  right: 10%;
+  height: 10%;
+  padding-left: 10% !important;
+  }
 
-@media only screen and (min-width: 320px) and (max-width: 479px) {
+  .text-area{
+  font-size: 17px;
+  }
+  /*.project-blurb{
+  font-size: 18px !important;
+  }*/
+  .st-member-pos{
+    font-size: 18px !important;
+  }
+}
+@media only screen and (min-width: 300px) and (max-width: 479px) {
   .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     background: #000;
     border: none
@@ -1915,14 +1925,32 @@ footer.site-footer a:hover {
     font-size: 30px;
     line-height: normal
   }
+.resume-img{
+  width: 90%;
+  height: 100%;
+  margin: 10%;
+  padding: 10%;
+  left: 10%;
+  right: 10%;
+  transform: scale(1.5);
+}
+
+
+.about-header {
+  text-align: center;
+  left: 10%;
+  right: 10%;
+  height: 10%;
+  padding-left: 10% !important;
+}
 .st-member{
-  width: 100%;
-  align-items: center;
+  width: 97%;
+  padding: 10%;
+  left: 10%;
+  right: 10%;
 }
-
 }
-
-@media only screen and (min-width: 480px) and (max-width: 767px) {
+@media only screen and (min-width: 400px) and (max-width: 767px) {
   .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     background: #000;
     border: none
@@ -1931,6 +1959,25 @@ footer.site-footer a:hover {
     font-size: 42px;
     line-height: normal
   }
+  .resume-img{
+    clear: both;
+    background-size: cover;
+    width: 80%;
+    height: 100%;
+    margin: 10%;
+    padding: 10%;
+    left: 10%;
+    right: 10%;
+    align-items: center;
+    transform: scale(1.9);
+  }
+  .btn .btn-main .resume-btn{
+    align-items: center;
+    height: 100%;
+    top: 20px;
+    margin: auto 10%;
+    padding: auto 10%;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1170px) {
@@ -1938,21 +1985,17 @@ footer.site-footer a:hover {
     font-size: 46px;
     line-height: normal
   }
-}
 
-/*@media (min-width: 1440px) {
-  .grid {
-    width: 100%;
-    padding: 0;
+  .resume-img{
+    clear: both;
+    background-size: cover;
+    width: 90%;
+    height: 100%;
+    margin: 10%;
+    padding: 10%;
+    left: 10%;
+    right: 10%;
+    align-items: center;
+    transform: scale(1.5);
   }
-
-  .grid figure {
-    position: relative;
-    float: left;
-    overflow: hidden;
-    background: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 25%;
-  }*/
 }
